--- a/package.json
+++ b/package.json
@@ -3,13 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://justisguin.github.io/Project2InitialPrototype/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "leaflet": "^1.9.4",
@@ -19,7 +16,6 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
-    "vite": "^6.2.0",
-    "gh-pages": "^6.0.0"
+    "vite": "^6.2.0"
   }
 }
